Fix collapsing.

--- a/less/layout.less
+++ b/less/layout.less
@@ -78,12 +78,6 @@
   justify-content: space-between;
 }
 
-// Used to hide an element on the page
-.hide {
-  display:none;
-}
-
-
 .width- {
   display        : flex;
   justify-content: space-around;
