--- a/less/lists.less
+++ b/less/lists.less
@@ -46,6 +46,11 @@
         white-space: nowrap;
         overflow: hidden;
     }
+
+    // Hide a row in the list
+    .hide {
+        display:none;
+      }
 }
 
 .skills-tab {
